# caniuse-rs

./: .gitignore  Cargo.toml  Makefile  README.md  info.plist
.github/workflows/: build-alfred-workflow.yml  build.yml  buld-alfred-workflow.yml  cargo-publish.yml  release.yml
src/: alfred_integration.rs  api.rs  browser.rs  constants.rs  feature.rs  main.rs  opts.rs  skim_finder.rs  url.rs
