[package]
name = "caniuse-rs"
description = "A command line client for caniuse.com, written in Rust."
version = "0.1.8"
edition = "2021"
license = "MIT"
homepage = "https://github.com/mrjones2014/caniuse-rs"
repository = "https://github.com/mrjones2014/caniuse-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
skim = "0.9.4"
lazy_static = "1.4.0"

[[bin]]
name = "caniuse"
path = "src/main.rs"
